# lab-door-access

./: .gitignore  README.md  config-reader-example.yml  installer.sh  mainproc.py  pyproject.toml  requirements-prod.txt  uninstaller.sh  usb-reader.conf
door_access/: find_reader.py  loggerconf.py  rfid_reader.py
tests/door_access/: test_find_reader.py
